<resources>
    <string name="app_name">RickandMortyChallenge</string>
    <string name="description">Search new character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_search">Search by name</string>
    <string name="txt_search_btn">Search</string>
    <string name="transition_card">fragment_character</string>
    <string name="transition_card_view">item_character_list</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="specie">Specie</string>
    <string name="location">Location</string>
    <string name="uname">uname</string>
</resources>