<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:transitionName="@string/transition_card_view"
    tools:context="ui.fragment.CharacterFragment">


    <ImageView
        android:id="@+id/character_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/character_fragment_nameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/character_fragment_nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/character_fragment_statusTitle"
        app:layout_constraintEnd_toStartOf="@+id/character_name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_img" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/character_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/uname"
        app:layout_constraintBottom_toBottomOf="@+id/character_fragment_nameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_fragment_nameTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/character_fragment_statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:text="@string/status"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/character_fragment_speciesTitle"
        app:layout_constraintEnd_toStartOf="@+id/character_status_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_fragment_nameTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/character_status_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/uname"
        app:layout_constraintBottom_toBottomOf="@+id/character_fragment_statusTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_fragment_statusTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/character_fragment_speciesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="147dp"
        android:text="@string/specie"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/character_species_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_fragment_statusTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/character_species_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/uname"
        app:layout_constraintBaseline_toBaselineOf="@+id/character_fragment_speciesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_fragment_speciesTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>
